// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FundingSource opens the edit funding source dialog box when edit button is clicked, cancel and save buttons are pressed 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-7"
  />
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3"
    >
      Funding Sources
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add Funding Source
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiBox-root MuiBox-root-5"
  >
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-6"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        agency name
      </h4>
      <button
        aria-label="Edit Funding Source Information"
        class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
        tabindex="0"
        title="Edit Funding Source Information"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          EDIT
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <dl>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Agency Project ID
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            ABC123
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Amount
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            $ 333
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Dates
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            04/14/2000 - 04/13/2021
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Investment Category
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            investment action
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`FundingSource renders correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3"
    >
      Funding Sources
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Add Funding Source
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <hr
      class="MuiDivider-root"
    />
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4"
      >
        agency name
      </h4>
      <button
        aria-label="Edit Funding Source Information"
        class="MuiButtonBase-root MuiButton-root MuiButton-text editButtonSmall"
        tabindex="0"
        title="Edit Funding Source Information"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium"
          >
            <svg
              role="presentation"
              style="width: 1.3125rem; height: 1.3125rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          EDIT
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <dl>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Agency Project ID
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            ABC123
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Amount
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            $ 333
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Funding Dates
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            04/14/2000 - 04/13/2021
          </dd>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
        >
          <dt
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Investment Category
          </dt>
          <dd
            class="MuiTypography-root MuiTypography-body1"
          >
            investment action
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
